<resources>
    <string name="app_name">Servicehubconnect</string>
    //Dummy credentials
<!--    <string name="map_key" translatable="false">AIzaSyAq8L4mpVsRU0XYfdm4njQJ_Ntpi-KOvyc</string>-->
    //from client credentials
    <string name="map_key" translatable="false">AIzaSyBALwdShhFbU0EwSx0Zu0UZPtukSK-T5WQ</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cancel">Cancel</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_welcome_to_serviceconnect">Welcome To Serviceconnect</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_create_account">Create account</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_please_enter_your_personal_detail">Please enter your personal detail.</string>
    <string name="txt_enter_first_name">Enter First Name</string>
    <string name="txt_enter_last_name">Enter Last Name</string>
    <string name="txt_enter_mobile_number">Enter Mobile Number</string>
    <string name="txt_and_terms_condition"><![CDATA[ Terms & Condition]]></string>
    <string name="txt_privacy_policy">Privacy Policy</string>




    <string name="blank_space">---</string>
    <string name="label_restaurant_description">Descriptions</string>




    <string name="msg_incomplete_permission">Please allow all permissions requires to select profile image</string>
    <string name="msg_no_internet">Please check your internet connection and try again.</string>
    <string name="msg_common_error">Oops something went wrong.</string>
    <string name="msg_invalid_email">Please enter a valid email id.</string>
    <string name="msg_empty_pass">Please enter your password.</string>
    <string name="msg_invalid_pass">Password must be at least 6 characters.</string>
    <string name="msg_invalid_first_name">Please enter a valid first name.</string>
    <string name="msg_invalid_last_name">Please enter a valid last name.</string>
    <string name="msg_empty_mobile_no">Please enter your mobile number.</string>
    <string name="msg_invalid_mobile_no">Please enter a valid mobile number.</string>
    <string name="msg_not_same_pass">Password does not match.</string>
    <string name="msg_empty_referral_code">Please enter a valid referral code.</string>
    <string name="menu_salon_beauty"><![CDATA[Salon & Beauty]]></string>
    <string name="menu_home_maintenance_remodeling">Home Maintenance/Remodeling</string>
    <string name="menu_speciality">Speciality</string>
    <string name="menu_track_professional">Track Professional</string>
    <string name="menu_my_service">My Service</string>
    <string name="menu_my_rating_comment"><![CDATA[My Rating & Comment]]></string>
    <string name="menu_refer_friends">Refer Friends</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_supports">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_salon_beauty"><![CDATA[Salon & Beauty]]></string>
    <string name="txt_verify">Verify</string>
    <string name="txt_verification">Verification</string>
    <string name="txt_we_have_sent_your_verification_code_on_your_email_id">We have sent your verification code on your email id.</string>
    <string name="menu_automative_autorepair">Automative/Autorepair</string>
    <string name="txt_hair_beauty_salon"><![CDATA[Hair & Beauty salon]]></string>
    <string name="txt_barber_shop_hair_removal"><![CDATA[Barber shop & Hair Removal]]></string>
    <string name="txt_nail_salon_eyebrows_lashes"><![CDATA[Nail Salon, Eyebrows & Lashes]]></string>
    <string name="txt_tattoo_shop_piercing"><![CDATA[Tattoo Shop & Piercing]]></string>
    <string name="txt_makeup_wedding_makeup_artist"><![CDATA[Makeup & Wedding makeup artist]]></string>


    <string name="txt_dentist_and_physical_therapy"><![CDATA[Dentist & Physical therapy]]></string>
    <string name="txt_day_spa_and_massage"><![CDATA[Day Spa & Massage]]></string>
    <string name="txt_pet_services"><![CDATA[Pet Services]]></string>
    <string name="txt_braiding_hair_style"><![CDATA[Braiding Hair Style]]></string>

    <string name="txt_select_service">Select Service</string>
    <string name="txt_new_user">New User?</string>
    <string name="txt_home_care">Home Care</string>
    <string name="txt_home_maintenance_remodeling">Home Maintenance/Remodeling</string>
    <string name="txt_speciality">Speciality</string>
    <string name="txt_auto_repair">Auto Repair</string>
    <string name="txt_auto_body_work">Auto Body work</string>
    <string name="txt_lube_auto_car">Lube Auto Car</string>
    <string name="txt_tyre_reapir">Tyre Repair</string>
    <string name="txt_towing">Towing</string>
    <string name="txt_driving_school">Driving School</string>
    
    <string name="txt_tutoring">Tutoring</string>
    <string name="txt_baby_sitter_child_care">Baby sitter/Child care</string>
    <string name="txt_nanny">Nanny</string>
    <string name="txt_petcare_petwalk">Pet Care/Pet Walk</string>
    <string name="txt_senior_care">Senior Care</string>
    <string name="txt_house_keeping">House Keeping</string>
    <string name="txt_product_pickup">Product Pick up</string>
    <string name="txt_ride">Ride</string>
    <string name="txt_personal_driver">Personal Driver</string>
    <string name="txt_cleaning_service">Cleaning Service</string>
    <string name="txt_wine">Wine</string>
    <string name="txt_grocery">Grocery</string>
    <string name="txt_restaurants">Restaurants</string>
    <string name="txt_product_store">Product Store</string>
    <string name="menu_my_invoice">My Invoice</string>
    <string name="txt_add_more_details">Add More Details</string>
    <string name="txt_done">Done</string>
    <string name="txt_select_location">Select Location</string>
    <string name="txt_enter_location">Your Location</string>
    <string name="txt_choose_destination">Choose Destination or Product pickup</string>
    <string name="txt_open_time">Open Time</string>
    <string name="txt_profile">Profile</string>
    <string name="payment_about">(A Cancellation Fee is assessed for any service that have been accepted by the restaurant. NO REFUND will be given if your service is an hour to be expected. Resion is because service man has cancelled app appointment and waiting for you.)</string>
    <string name="txt_apply_code">Apply Code</string>
    <string name="txt_to_help_serviceconnect_run_smoothly_and_to_cover_the_cost_of_the_products_and_services_serviceconnect_provide_we_charges_a_service_fee_when_the_order_is_completed">To help Serviceconnect run smoothly and to cover the cost of the products and services Serviceconnect provide. We charges a service fee when the order is completed.</string>
    <string name="txt_refer_your_friend_and_get_discount_voucher_of_10_and_your_friend_and_will_get_discount_voucher_of_10">Refer your friend and get discount voucher of 10% and your friend and will get discount voucher of 10%</string>
    <string name="txt_finish_work">Finish Work</string>
    <string name="txt_service_product_details"><![CDATA[Service & Product Details]]></string>
    <string name="txt_restaurant_wine">Restaurant/Wine</string>
    <string name="txt_tracking">Tracking</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_save">Save</string>
    <string name="share_text">Hey,\n Travel Easy and Safe with \"ServiceHubConnect\".\n Download now\n https://play.google.com/store/apps/details?id=</string>
    <string name="txt_your_mail_will_be_discarded_are_you_sure_want_to_continue">Your mail will be discarded.Are you sure want to continue?</string>
    <string name="txt_no">No</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_do_he_she_need_a_other_location">Do he/she need a other location?</string>
    <string name="hint_enter_your_local_city">Enter your local city</string>
    <string name="text_resend_otp">Resend OTP</string>
    <string name="menu_rescheduled_service">Rescheduled Service</string>
    <string name="txt_no_extras_selected">No Extras Selected</string>
    <string name="txt_item_total">Item Total</string>
    <string name="txt_add_item">Add Item</string>
    <string name="txt_address">Address</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_support">Support</string>
    <string name="txt_email">Email</string>


</resources>