<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_track_service_man"
        android:icon="@drawable/track_service_man_icon"
        android:title="@string/menu_track_professional" />
    <item
        android:id="@+id/nav_my_service"
        android:icon="@drawable/my_service_icon"
        android:title="@string/menu_my_service" />

    <item
        android:id="@+id/nav_my_invoice"
        android:icon="@drawable/my_invoice_icon"
        android:title="@string/menu_my_invoice" />

    <item
        android:id="@+id/nav_my_rating_comment"
        android:icon="@drawable/rating_comment_icon"
        android:title="@string/menu_my_rating_comment" />

    <item
        android:id="@+id/nav_reschedule_service"
        android:icon="@drawable/rescheduled_service_icon"
        android:title="@string/menu_rescheduled_service" />

    <item
        android:id="@+id/nav_refer_friends"
        android:icon="@drawable/refer_friend_icon"
        android:title="@string/menu_refer_friends" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/notification_icon"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/support_icon"
        android:title="@string/menu_supports" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting_icon"
        android:title="@string/menu_settings" />

</menu>