<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_salon_beauty"
        android:icon="@drawable/salon_beauty_icon"
        android:title="@string/menu_salon_beauty"/>
    <item
        android:id="@+id/nav_automative_autorepair"
        android:icon="@drawable/automative_autorepair_icon"
        android:title="@string/menu_automative_autorepair" />
    <item
        android:id="@+id/nav_homecare_product_pickup_ride"
        android:icon="@drawable/home_care_product_pickup_ride_icon"
        android:title="Home Care/Product pickup/Ride" />
    <item
        android:id="@+id/nav_home_maintenance_remodeling"
        android:icon="@drawable/home_maintenance_remodling_icon"
        android:title="@string/menu_home_maintenance_remodeling" />
    <item
        android:id="@+id/nav_speciality"
        android:icon="@drawable/speciality_icon"
        android:title="@string/menu_speciality" />
    <item
        android:id="@+id/nav_track_service_man"
        android:icon="@drawable/track_service_man_icon"
        android:title="@string/menu_track_service_man" />
    <item
        android:id="@+id/nav_my_service"
        android:icon="@drawable/my_service_icon"
        android:title="@string/menu_my_service" />

    <item
        android:id="@+id/nav_my_invoice"
        android:icon="@drawable/my_service_icon"
        android:title="@string/menu_my_invoice" />

    <item
        android:id="@+id/nav_my_rating_comment"
        android:icon="@drawable/rating_comment_icon"
        android:title="@string/menu_my_rating_comment" />

    <item
        android:id="@+id/nav_reschedule_service"
        android:icon="@drawable/rating_comment_icon"
        android:title="Rescheduled Service" />


    <item
        android:id="@+id/nav_refer_friends"
        android:icon="@drawable/refer_friend_icon"
        android:title="@string/menu_refer_friends" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/notification_icon"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/support_icon"
        android:title="@string/menu_supports" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting_icon"
        android:title="@string/menu_settings" />

</menu>