<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/white_background_rounded_rect">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_common_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorBlack"
            android:text="@string/txt_your_mail_will_be_discarded_are_you_sure_want_to_continue" />

        <Button
            android:id="@+id/tv_no"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_common_msg"
            app:layout_constraintLeft_toRightOf="@+id/tv_yes"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/txt_no" />

        <Button
            android:id="@+id/tv_yes"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_common_msg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_no"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/txt_yes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>