<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/white_background_rounded_rect">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_other_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorBlack"
            android:text="@string/txt_do_he_she_need_a_other_location" />

        <TextView
            android:id="@+id/tv_optional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_other_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/_10sdp"
            android:alpha=".7"
            android:textColor="@color/light_grey"
            android:text="(Optional)" />

        <Button
            android:id="@+id/tv_no"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_optional"
            app:layout_constraintLeft_toRightOf="@+id/tv_yes"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/txt_no"
            />

        <Button
            android:id="@+id/tv_yes"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_optional"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_no"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/txt_yes" />

        <EditText
            android:id="@+id/tv_other_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_yes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:lines="4"
            android:gravity="left"
            android:background="@drawable/grey_background_rounded_rect"
            android:textSize="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:textColor="@color/light_grey"
            android:hint="Enter other address"
            android:text=""
            android:visibility="gone" />

        <Button
            android:id="@+id/tv_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_other_address"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/txt_done"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>