<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlt_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/rlt_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/extra_package_list_header_bg">


        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:text="@string/blank_space"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorBlack"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/txt_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@+id/txt_item_name"
            android:text="@string/blank_space"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/txt_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@+id/txt_item_price"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@+id/txt_item_name"
            android:text="@string/blank_space"
            android:textSize="12sp"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlt_layout_header"
        android:layout_above="@+id/rlt_layout_footer"
        android:fillViewport="true">

        <!-- Empty layout container. It will get filled dynamically -->
        <LinearLayout
            android:id="@+id/ln_layout_extras_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"/>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/rlt_layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txt_selected_extras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/txt_no_extras_selected"
            android:textSize="12sp"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rlt_layout_add_extras"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@+id/txt_selected_extras"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/txt_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/txt_item_total"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:text="@string/txt_add_item"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>